@@ -1,0 +1,44 @@
+MiniWebSvr Compiling How-to:
+
+
+
+To compile the sources:
+Add all C files in the src/ directory to your project, or:
+
+Using MinGW (Windows):
+
+gcc -o miniwebsvr.exe src/*.c -Wall -lws2_32 -O2 -s
+
+Using GCC (UNIX/Linux):
+
+gcc -o miniwebsvr src/*.c -Wall -O2 -s
+
+To enable debug information just define "_DEBUG"
+If you define VERSION="someversion" it will override the version name/number
+
+
+
+Required Libraries:
+# POSIX-Style Libraries
+pthread		(PThread library)
+# Win32 Libraries
+ws2_32 or ws2	(32-Bit Winsock 2 library) 
+# Linux Libraries
+rt		(-lrt)
+
+
+
+A Makefile is also provided for UNIX/LINUX systems:
+Please use GNU make.(gmake on non-GNU platforms, like FreeBSD)
+
+Flags that affect compilation:
+  CFLAGS        - Compiler optimization flags
+
+Targets:'
+  release       - Builds a release build of MiniWebSvr
+  debug         - Builds a debug build of MiniWebSvr
+  xwin32        - Builds a release build of MiniWebSvr for Windows using mingw32-gcc cross compiler
+  xwin32d       - Builds a debug build of MiniWebSvr for Windows using mingw32-gcc cross compiler
+
+Maintenance:
+  clean         - Cleans up the files created by make
